--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,28 +1,19 @@
 # This workflow will build a golang project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
-name: Go
-
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+name: golang-pipeline
+on: push
 
 jobs:
-
-  build:
+  test:
     runs-on: ubuntu-latest
+    container: golang:1.22
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.20'
+      - name: Run Unit Tests
+        run: GOOS=linux GOARCH=amd64 go test
 
-    - name: Build
-      run: go build -v ./...
-
-    - name: Test
-      run: go test -v ./...
+      - name: Vet
+        run: |
+          go vet ./... 
